--- a/components/hero.html
+++ b/components/hero.html
@@ -2,7 +2,14 @@
         <div class="hero-content fade-in">
             <div class="hero-left">
                 <div class="avatar">
-                    <img src="assets/images/animation.png" alt="Khov Somawatey">
+                    <img 
+                        src="assets/images/animation.png" 
+                        alt="Profile Avatar" 
+                        width="400" 
+                        height="500"
+                        fetchpriority="high"
+                        loading="eager"
+                    />
                 </div>
             </div>
             <div class="hero-right">
@@ -21,8 +28,8 @@
                     <a href="mailto:somavatey.khov@gmail.com" class="social-link gmail">
                         <i class="fas fa-envelope"></i>
                     </a>
-                    <a href="https://wa.me/+855974757850" class="social-link whatsapp">
-                        <i class="fab fa-whatsapp"></i>
+                    <a href="https://t.me/Somawateyy" class="social-link whatsapp">
+                        <i class="fab fa-telegram"></i>
                     </a>
                 </div>
             </div>
