--- a/components/hero.html
+++ b/components/hero.html
@@ -2,14 +2,7 @@
         <div class="hero-content fade-in">
             <div class="hero-left">
                 <div class="avatar">
-                    <img 
-                        src="assets/images/animation.png" 
-                        alt="Profile Avatar" 
-                        width="400" 
-                        height="500"
-                        fetchpriority="high"
-                        loading="eager"
-                    />
+                    <img src="assets/images/animation.png" alt="Khov Somawatey">
                 </div>
             </div>
             <div class="hero-right">
