--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,8 @@ body {
 
 /* Floating Animation Elements */
 
+/* Floating Animation Elements */Add commentMore actions
+
 .floating-element:nth-child(1) {
     top: 20%;
     left: 10%;
